--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nodemailer": "^6.9.15",
-    "path": "^0.12.7",
-    "zustand": "^5.0.0-rc.2"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
